--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node server.js",
     "dev": "concurrently 'nodemon server.js' 'cd client && npm start'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd clien && npm i && npm run build"
+    "postinstall": "cd client && npm i && npm run build"
   },
   "repository": {
     "type": "git",
